게시글 목록 이미지 매핑 메소드 분리